style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');

*
{
    padding: 0;
    margin: 0;
    font-family: 'Poppins', sans-serif;
    box-sizing: border-box;
}

body
{
    width: 100%;
    height: 100vh;
    background-color:black;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin: 0;
}

/*navigation content manip*/
nav
{
    width: 100%;
    height: 20vh;
    position: sticky
}

.nav-container
{
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.logo
{
    color: antiquewhite;
    font-size: 2rem;
    font-weight: bold;
}

.logo span{
    color: #d5533d;
    text-shadow: 0 0 10px #8c2c23;
}
.hamburg,
.cancel
{
    cursor: pointer;
    position: absolute;
    right: 15px;
    top: 10px;
    color: antiquewhite;
    display: none;/*This used to be block*/
    font-size: clamp(2.5rem, 0.5rem + 5vw, 3rem);
}

.nav-container .links {
    display: flex;
}

.nav-container .links a{
    font-size: 1.2rem;
    color: antiquewhite;
    margin: 0 20px;
    text-decoration: none;
    font-weight: 550;
    transition: 0.3s linear;
}
.nav-container .links a:hover{
    color: #d5533d;
    border-bottom: 2px solid #d5533d;
}

/*Dropdown content manip*/
.dropdown
{
    z-index:100;
    position: absolute;
    top: 0;
    transform: translateY(-500px);
    width: 100%;
    height: auto;
    backdrop-filter: blur(4px) brightness(40%);
    box-shadow: 0 0  20px black;
    transition: 0.2s linear;
}

.dropdown .links a
{
    display: flex;
    color: antiquewhite;
    text-decoration: none;
    padding: 15px 0;
    justify-content: center;
    align-items: center;
    transition: 0.2s linear;
}

.dropdown .links a:hover{
    background-color: #d5533d;
}

/*Main content manip*/
section{
    width: 100%;
    height: 70vh;
}

.main-container
{
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.main-container .content{
    color: antiquewhite;
    width: 40%;
    min-height: 100px;
}

.content h1{
    font-size: clamp(1rem, 1rem + 5vw, 1.8rem);
}

.content h1 span{
    font-weight: 700;
    text-shadow: 0 0 10px #8c2c23;
    color: #d5533d;
}

.content .typewriter{
    font-size: clamp(1rem, 1rem + 5vw, 2.5rem);
    font-weight: 700;
}

.typewriter span{
    color: #d5533d;
    text-shadow:  0 0 10px #8c2c23;
}

.content p{
    font-size: clamp(0,4rem, 0.2rem + 9vw, 1rem);
    margin : 10px 0;
}

/*Social links manip*/
.social-links i{
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 3rem;
    height: 3rem;
    background-color: transparent;
    border: 0.2rem solid #8c2c23;
    border-radius: 50%;
    color: #d5533d;
    margin: 0 15px;
    font-size: 1.5rem;
    transition: 0.2s linear;
}

.social-links i:hover{
    scale: 1.3;
    filter: drop-shadow(0 0 10px #8c2c23);
    color: black;
    background-color: #d5533d;
}

/*About Social Links Manip*/
.about-social-links {
    display: block;
    margin: 0 auto;
    width: 100%;
    position: absolute;
    bottom: 30px; 
}
.about-social-links a{
    margin: 0 10px;
    color: transparent;
}
.about-social-links i {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 3rem;
    height: 3rem;
    background-color: transparent;
    border: 0.2rem solid #8c2c23;
    border-radius: 50%;
    color: #d5533d;
    font-size: 1.5rem;
    transition: 0.2s linear;
}

.about-social-links i:hover {
    scale: 1.3;
    filter: drop-shadow(0 0 10px #8c2c23);
    color: black;
    background-color: #d5533d;
}

/*Button Manip*/
.content button{
    width: 50%;
    height: 6vh;
    margin: 30px;
    background-color: #d5533d;
    color: white;
    border: none;
    outline: none;
    font-size: 120%;
    font-weight: 700;
    border-radius: 5px;
    transition: 0.2s linear;
    }

.content button:hover{
    scale: 1.1;
    color: #d5533d;
    border: 2px solid #8c2c23;
    background-color: transparent;
    font-weight: 700;
    box-shadow: 0 0 40px 5px #8c2c23;
}

/*index Image manip section*/
.main-container .image{
    width: 500px;
    height: auto;
    border-radius: 100%;
    overflow: hidden;
    box-shadow: 0 0 50px #d5533d;
}

.main-container .image img{
    width: 100%;
    height: auto;
}

.main-container .image:hover{
    animation: animate 1.5s ease-in-out infinite;
}

/*About section image manip*/
.about-image{
    width: 200px;
    height: auto;
    border-radius: 100%;
    overflow: hidden;
    box-shadow: 0 0 50px #d5533d;
    margin: 0 auto;
    display: block;
}
.about-image img{
    width: 100%;
    height: auto;
}




@keyframes animate {
    0%
    {
        scale: 1;
    }
    50%
    {
        scale: 1.05;
    }
    100%
    {
        scale: 1;
    }
}

@media (max-width:884px) {
    nav .logo{
        position: absolute;
        top: 16px;
        left: 15px;
        font-size: 1.5rem;
    }

    .main-container{
        display: flex;
        flex-direction: column-reverse;
    }

    .nav-container .links{
        display: none;
    }

    .hamburg,
    .cancel{
        display: block;
    }

    .main-container .content{
        width: 80%;
    }
    .social-links i{
        width: 2.5rem;
        height: 2.5rem;
        font-size: 1.5rem;
    }

    .main-container .image{
        z-index: -1;
        width: 50%;
        height: 60%;
    }
}

@media (max-width:440px) {
    .main-container .image{
        width: 70%;
        height: 60%;
    }

    .main-container .content{
        width: 80%;
    }

    .main-container button{
        margin-top: 15px;
    }
}

